--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "googleapis": "^144.0.0",
+        "mongoose": "^8.8.0",
         "nodemon": "^3.1.7"
     }
 }
